# esperanto

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BRIODOCS_TIERS.md  Brio_Esperanto_git_setup_README.md  Brio_Esperanto_implementation_Plan.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NEXT_STEPS.md  README.md  README.pypi.md  SECURITY.md  TESTING_QUICKSTART.md  pyproject.toml
.playwright-mcp/: page-2026-05-12T20-06-00-055Z.yml  page-2026-05-12T20-06-05-832Z.yml
claude-plans/: oss-40-jina-provider-implementation.md
demo_notebooks/: embedding_demo.ipynb  llm_demo.ipynb  speech_to_text_demo.ipynb  text_to_speech_demo_async.ipynb
docs/: 2025-12-08 Performance Metrics Implementation.md  2025-12-10 Logging_migration_to_scalable_framework.md  2025-12-20_Developer_Guide.md  README.md  brio_ext_integration.md  brio_ext_integration_v2.md  configuration.md  embedding.md  embeddings.md  langchain.md  llama_cpp_test_specification.md  llm.md  quickstart.md  rerank.md  speech_to_text.md  text_to_speech.md
esperanto/: __init__.py  factory.py
examples/: pydantic_ai_example.py  transformers_advanced_features.py
fixtures/: briodocs_config.yaml  scenarios.json  test_cases.yaml
notebooks/: embedding_models.ipynb  factories.ipynb  llm_models.ipynb  rerankers.ipynb  text_to_speech.ipynb
scripts/: README.md  download_models.sh  start_server.sh  start_server_v2.sh  stop_server.sh  test_with_llm.py
tests/: __init__.py  conftest.py  test_deprecation_warnings.py  test_factory.py  test_http_connection.py  test_message_thinking.py  (+6 more)
(+299 files in other folders)
