[tool.poetry]
name = "esperanto"
version = "0.1.0"
description = "A unified interface for various AI model providers"
authors = ["Luis Novo"]
readme = "README.md"
packages = [
    {include = "esperanto", from = "."},
]

[tool.poetry.dependencies]
pydantic = "<2.10"
python = "^3.11"
loguru = "^0.7.2"
langchain = "^0.3.3"
openai = "^1.52.0"
litellm = "^1.50.1"
langchain-openai = "^0.2.3"
langchain-anthropic = "^0.2.3"
langchain-ollama = "^0.2.0"
langchain-google-vertexai = "^2.0.5"
langchain-google-genai = "^2.0.1"
langchain-groq = "^0.2.1"
groq = "^0.12.0"
ollama = "^0.4.0"
anthropic = "^0.39.0"
google-cloud-speech = "^2.28.1"
google-cloud-texttospeech = "^2.21.1"
langchain-community = "^0.3.7"
elevenlabs = "^1.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.5.5"
mypy = "^1.11.1"
types-requests = "^2.32.0.20241016"
ipywidgets = "^8.1.5"
pytest = "^8.3.3"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
